<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.login.LoginActivity">


        <TextView
            android:id="@+id/login_hint_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="@string/login_hint"
            android:textColor="@color/color_black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_username_et"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_login_et_bg"
            android:gravity="center"
            android:hint="@string/login_username"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_hint_tv" />

        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_login_et_bg"
            android:gravity="center"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_username_et" />

        <Button
            android:id="@+id/login_login_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_login_btn_bg"
            android:text="@string/login_login"
            android:textColor="@color/color_white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password_et" />


        <TextView
            android:id="@+id/login_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/login_register"
            android:textColor="@color/color_black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/login_view" />

        <View
            android:id="@+id/login_view"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginBottom="30dp"
            android:background="@color/color_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/login_fingerprint_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/login_fingerprint"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/login_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>